--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+###> misc
+.history
+.env
+/.idea
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -18,3 +22,10 @@
 /phpunit.xml
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
