--- a/assets/js/react/package.json
+++ b/assets/js/react/package.json
@@ -7,12 +7,14 @@
     "react-scripts": "1.1.5"
   },
   "dependencies": {
+    "bootstrap": "5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-scripts start",
