--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dependencies": {
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "sass": "^1.48.0",
+        "sass-loader": "^12.4.0"
     }
 }
