--- a/assets/js/react/package.json
+++ b/assets/js/react/package.json
@@ -11,10 +11,12 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-scripts start",
