--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.16.7",
         "@symfony/stimulus-bridge": "^2.0.0",
-        "@symfony/webpack-encore": "^1.0.0",
+        "@symfony/webpack-encore": "^1.7.0",
         "core-js": "^3.0.0",
         "regenerator-runtime": "^0.13.2",
         "stimulus": "^2.0.0",
@@ -17,6 +17,12 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@babel/core": "^7.16.7",
+        "@babel/preset-env": "^7.16.8",
+        "babel-loader": "^8.2.3",
+        "babel-preset-preact": "^2.0.0",
+        "html-webpack-plugin": "^5.5.0",
+        "preact": "^10.6.4",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
