added new template and entry point for household landing. Styles coming

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -17,3 +17,8 @@ create_expense:
     path: api/expenses/new
     controller: App\Controller\ExpenseController::create
     methods: POST
+
+household_landing:
+    path: /my-household
+    controller: App\Controller\HouseholdController::show
+    methods: GET|HEAD
