--- a/assets/js/react/package.json
+++ b/assets/js/react/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
