--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@babel/core": "^7.16.7",
         "@babel/preset-env": "^7.16.8",
+        "axios": "^0.25.0",
         "babel-loader": "^8.2.3",
         "babel-preset-preact": "^2.0.0",
         "html-webpack-plugin": "^5.5.0",
@@ -26,6 +27,7 @@
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "routing": "^0.0.2",
         "sass": "^1.48.0",
         "sass-loader": "^12.4.0"
     }
