--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=27da7c1b7b7a7e9c4fc6d7158000c37c
+APP_SECRET=secret
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -27,6 +27,10 @@ APP_SECRET=27da7c1b7b7a7e9c4fc6d7158000c37c
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3307/family_tracker?serverVersion=5.7"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:db_port/db_name?serverVersion=mariadb-10.4.11"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
