--- a/assets/js/react/package.json
+++ b/assets/js/react/package.json
@@ -7,11 +7,13 @@
     "react-scripts": "1.1.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
     "bootstrap": "5.1.3",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
@@ -21,6 +23,8 @@
   },
   "scripts": {
     "start": "cross-env PORT=3000 react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "lint": "eslint assets/js/react --ext .js,.jsx",
+    "lint:fix": "yarn lint --fix"
   }
 }
