--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "lint": "eslint assets/js/react --ext .js,.jsx",
+        "lint:fix": "yarn lint --fix"
     },
     "dependencies": {
         "@babel/core": "^7.16.7",
