--- a/react_express/package.json
+++ b/react_express/package.json
@@ -4,25 +4,14 @@
   "private": true,
   "devDependencies": {
     "cross-env": "5.1.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "react-scripts": "1.1.5"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
     "bootstrap": "5.1.3",
-    "formik": "^2.2.9",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.1.1",
-    "react-dom": "^18.2.0",
-    "react-hot-loader": "^4.13.0",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
-    "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "styled-components": "^5.3.3",
+    "eslint": "^7.32.0 || ^8.2.0",
     "web-vitals": "^3.0.1"
   },
   "scripts": {
