--- a/react_express/api/package.json
+++ b/react_express/api/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19"
