--- a/nestjs_backend/package.json
+++ b/nestjs_backend/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/moment": "^2.13.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.3",
     "knex": "^2.3.0",
     "moment": "^2.29.4",
