--- a/react_nodejs/nestjs_backend/package.json
+++ b/react_nodejs/nestjs_backend/package.json
@@ -18,17 +18,23 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.1.3",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/moment": "^2.13.0",
+    "apollo-server-express": "^3.10.3",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
     "knex": "^2.3.0",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
@@ -56,7 +62,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   },
