--- a/react_nodejs/nestjs_backend/package.json
+++ b/react_nodejs/nestjs_backend/package.json
@@ -19,7 +19,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migrations": "npx typeorm-ts-node-commonjs migration:run -d ./src/data-source.ts",
+    "new-migration": "typeorm migration:create ./src/migrations/$npm_config_name",
+    "revert-migrations": "npx typeorm-ts-node-commonjs migration:revert -d ./src/data-source.ts"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.3",
