--- a/react_nodejs/express_backend/package.json
+++ b/react_nodejs/express_backend/package.json
@@ -10,8 +10,13 @@
   "author": "Steve Abouem",
   "dependencies": {
     "@sequelize/core": "^7.0.0-alpha.10",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
     "@types/sequelize": "^4.28.14",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
