--- a/react_nodejs/client/package.json
+++ b/react_nodejs/client/package.json
@@ -16,6 +16,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/axios": "^0.14.0",
+    "@types/jest": "^29.5.1",
+    "@types/node": "^18.16.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@types/react-redux": "^7.1.25",
+    "axios": "^1.4.0",
     "boostrap": "^2.0.0",
     "formik": "^2.2.9",
     "mysql": "^2.18.1",
@@ -32,6 +39,7 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.54.9",
     "styled-components": "^5.3.3",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
