--- a/react_nodejs/client/package.json
+++ b/react_nodejs/client/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.0",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^18.2.1",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
@@ -29,6 +30,7 @@
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.3.0",
