--- a/react_nodejs/client/package.json
+++ b/react_nodejs/client/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "5.0.1"
   },
   "dependencies": {
+    "@csstools/normalize.css": "^12.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -32,13 +33,16 @@
     "react-bootstrap": "^2.5.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sanitize.css": "^13.0.0",
     "sass": "^1.54.9",
     "styled-components": "^5.3.3",
     "typescript": "^4.9.5",
