--- a/react_nodejs/client/package.json
+++ b/react_nodejs/client/package.json
@@ -26,6 +26,7 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "boostrap": "^2.0.0",
+    "dayjs": "^1.11.9",
     "formik": "^2.2.9",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.19",
