--- a/react_nodejs/express_backend/package.json
+++ b/react_nodejs/express_backend/package.json
@@ -12,14 +12,18 @@
     "@sequelize/core": "^7.0.0-alpha.10",
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/sequelize": "^4.28.14",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
     "sequelize": "^6.29.0"
