--- a/react_nodejs/express_backend/package.json
+++ b/react_nodejs/express_backend/package.json
@@ -17,20 +17,25 @@
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/sequelize": "^4.28.14",
+    "@types/winston": "^2.4.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.29.0"
+    "sequelize": "^6.29.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.10",
     "@types/node": "^18.15.5",
     "babel-register": "^6.26.0",
     "nodemon": "^2.0.20",
