--- a/react_nodejs/express_backend/package.json
+++ b/react_nodejs/express_backend/package.json
@@ -20,6 +20,7 @@
     "@types/winston": "^2.4.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
