--- a/react_nodejs/client/package.json
+++ b/react_nodejs/client/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@lingui/cli": "^4.7.0",
+    "@lingui/macro": "^4.7.0",
+    "@types/node": "^20.11.5",
+    "babel-plugin-macros": "^3.1.0",
     "cross-env": "5.1.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -13,13 +18,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@lingui/react": "^4.7.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.1",
-    "@types/node": "^18.16.3",
     "@types/react": "^18.2.0",
     "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "^18.2.1",
@@ -53,7 +58,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "extract": "lingui extract",
+    "compile": "lingui compile"
   },
   "eslintConfig": {
     "extends": [
